--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
     "browser-sync": "2.18.13",
+    "css-loader": "^2.1.0",
     "del": "3.0.0",
     "gulp": "3.9.1",
     "gulp-cssnano": "2.1.2",
@@ -32,6 +33,7 @@
     "gulp-uglify": "3.0.0",
     "gulp-usemin": "0.3.28",
     "gulp-watch": "4.3.11",
+    "jquery": "^3.3.1",
     "postcss-hexrgba": "1.0.0",
     "postcss-import": "11.0.0",
     "postcss-mixins": "6.2.0",
